Invalid geometry in Alembic crashes Blender #76514

Closed
opened 2020-05-07 19:07:03 +02:00 by Radu Mitroi · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: 2.79

Short description of error
I'm trying to import an alembic file from SpeedTree that contains a plant with a growing animation. As soon as I hit Import, Blender crashes.
Note: If I try to import an alembic file of the same model, only with wind animation and no growing animation, the file imports fine and the animation works. Tried opening the growing animation file in Blender 2.79 as well, and it all works perfectly fine.
I tried cheating my way around, and save that scene in Blender 2.79 and then open it in Blender 2.82. While that works, I can open the scene and the model is in there, moving the timeline in any way causes Blender to crash again.

Exact steps for others to reproduce the error
Just open an empty scene and try to import the attached files. One of them will crash your Blender.

Flowe_wind.abc

Flower_grow.abc

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: 2.79 **Short description of error** I'm trying to import an alembic file from SpeedTree that contains a plant with a growing animation. As soon as I hit Import, Blender crashes. Note: If I try to import an alembic file of the same model, only with wind animation and no growing animation, the file imports fine and the animation works. Tried opening the growing animation file in Blender 2.79 as well, and it all works perfectly fine. I tried cheating my way around, and save that scene in Blender 2.79 and then open it in Blender 2.82. While that works, I can open the scene and the model is in there, moving the timeline in any way causes Blender to crash again. **Exact steps for others to reproduce the error** Just open an empty scene and try to import the attached files. One of them will crash your Blender. [Flowe_wind.abc](https://archive.blender.org/developer/F8518664/Flowe_wind.abc) [Flower_grow.abc](https://archive.blender.org/developer/F8518666/Flower_grow.abc)
Author

Added subscriber: @radumitroi

Added subscriber: @radumitroi
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Works fine in 2.80 release still, later releases fail...

CC @sybren.

Works fine in 2.80 release still, later releases fail... CC @sybren.
Author

In #76514#926275, @lichtwerk wrote:
Works fine in 2.80 release still, later releases fail...

CC @sybren.

Well, I'll have a go on with 2.80. Hopefully it does work. I only need it in a version that supports Eevee, so I don't care for the rest if it does work.

> In #76514#926275, @lichtwerk wrote: > Works fine in 2.80 release still, later releases fail... > > CC @sybren. Well, I'll have a go on with 2.80. Hopefully it does work. I only need it in a version that supports Eevee, so I don't care for the rest if it does work.
Sybren A. Stüvel was assigned by Bastien Montagne 2020-05-12 09:56:15 +02:00
Sybren A. Stüvel changed title from Blender opens some alembic files while others cause immediate crash to Invalid geometry in Alembic crashes Blender 2020-05-12 13:14:59 +02:00

This issue was referenced by 973ab436f0

This issue was referenced by 973ab436f07c652cb6aa13bedc351df06bce6561

SpeedTree is known for producing invalid geometry, and this case is the same. Still, it's nice to not have Blender crash on it.

SpeedTree is known for producing invalid geometry, and this case is the same. Still, it's nice to not have Blender crash on it.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76514
No description provided.